--- a/Result.html
+++ b/Result.html
@@ -1,9 +1,9 @@
-<link href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css" type="text/css" rel="stylesheet">
+<link href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css" type="text/css" rel="stylesheet">
 <script
   src="https://code.jquery.com/jquery-1.12.4.min.js"
   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
   crossorigin="anonymous"></script>
-<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+<script src="https:///code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 <link rel="stylesheet" href="./style.css" type="text/css" media="all">
 <link rel="stylesheet" href="./print.css" type="text/css" media="print">
 <style type="text/css">
