Hide engarde tabs unless necessary.

--- a/Result.html
+++ b/Result.html
@@ -207,7 +207,7 @@
     }
 </style>
 <div class="tabs"> 
-    <ul class="tabNav">
+    <ul class="tabNav" style="display: none;">
         <li><a tabindex="0" title="Fencers" href="">Entry</a></li>
         <li><a tabindex="1" title="Poule" href="">Poule</a></li>
         <li><a tabindex="2" title="Tableau" href="">Tableau</a></li>
