--- a/ResultsIndex.html
+++ b/ResultsIndex.html
@@ -6,7 +6,7 @@
     function getParameterByName(name, url) {
         if (!url) url = window.location.href;
         url = url.replace('%3d', '=');
-        url = url.replace('%3F', '?');
+        url = url.replace('%3f', '?');
         name = name.replace(/[\[\]]/g, "\\$&");        
         regex = new RegExp("[?" + String.fromCharCode(38) + "]" + name + "=[^" + String.fromCharCode(38) + "]*");
         var result = regex.exec(url);
