--- a/ResultsIndex.html
+++ b/ResultsIndex.html
@@ -51,6 +51,8 @@
                     break;
                 case "jt": categoryString = 'Junior Teams';
                     break;
+                case "u9": categoryString = 'U9';
+                    break;
                 case "u11": categoryString = 'U11';
                     break;
                 case "u13": categoryString = 'U13';
